Test/errors/err_move_param_plain_return.cb
// A 'move' owning-struct parameter returned by a PLAIN 'return h' copies the parameter's
// owning fields into the caller's return slot without releasing the parameter, so both the
// returned value and the expiring parameter free the same storage (double free). The remedy
// is 'return move h', which detaches the source. This pins the rejection.
struct Payload { int v = 0; ~Payload() { printf("pdtor\n"); } };
struct Holder  { unique Payload* p = nullptr; };

expect_error("cannot return 'move' parameter 'h' by a plain 'return'") {
    move Holder fwd(move Holder h) { return h; }
}

extern int main() { return 0; }
